; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_intlist.c_intlist__new.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_intlist.c_intlist__new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intlist = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

@intlist__node_cmp = common dso_local global i32 0, align 4
@intlist__node_new = common dso_local global i32 0, align 4
@intlist__node_delete = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.intlist* @intlist__new() #0 {
  %1 = alloca %struct.intlist*, align 8
  %2 = call %struct.intlist* @malloc(i32 12)
  store %struct.intlist* %2, %struct.intlist** %1, align 8
  %3 = load %struct.intlist*, %struct.intlist** %1, align 8
  %4 = icmp ne %struct.intlist* %3, null
  br i1 %4, label %5, label %21

5:                                                ; preds = %0
  %6 = load %struct.intlist*, %struct.intlist** %1, align 8
  %7 = getelementptr inbounds %struct.intlist, %struct.intlist* %6, i32 0, i32 0
  %8 = call i32 @rblist__init(%struct.TYPE_2__* %7)
  %9 = load i32, i32* @intlist__node_cmp, align 4
  %10 = load %struct.intlist*, %struct.intlist** %1, align 8
  %11 = getelementptr inbounds %struct.intlist, %struct.intlist* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 2
  store i32 %9, i32* %12, align 4
  %13 = load i32, i32* @intlist__node_new, align 4
  %14 = load %struct.intlist*, %struct.intlist** %1, align 8
  %15 = getelementptr inbounds %struct.intlist, %struct.intlist* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  store i32 %13, i32* %16, align 4
  %17 = load i32, i32* @intlist__node_delete, align 4
  %18 = load %struct.intlist*, %struct.intlist** %1, align 8
  %19 = getelementptr inbounds %struct.intlist, %struct.intlist* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  store i32 %17, i32* %20, align 4
  br label %21

21:                                               ; preds = %5, %0
  %22 = load %struct.intlist*, %struct.intlist** %1, align 8
  ret %struct.intlist* %22
}

declare dso_local %struct.intlist* @malloc(i32) #1

declare dso_local i32 @rblist__init(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
